# Slicer-DTI-ALPS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
DTI_ALPS/: CMakeLists.txt  DTI_ALPS.py
DTI_ALPS/Resources/: runDTIALPS.py
DTI_ALPS/Resources/UI/: DTI_ALPS.ui
docs/: index.md
